--- a/GameShop/GameShop/GameShop.csproj
+++ b/GameShop/GameShop/GameShop.csproj
@@ -46,6 +46,7 @@
   <ItemGroup>
     <Compile Include="BackEnd\Context.cs" />
     <Compile Include="Core\Entity.cs" />
+    <Compile Include="Core\Order.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -58,6 +59,7 @@
     <Compile Include="FrontEnd\GamePages.cs" />
     <Compile Include="FrontEnd\LogOnPage.cs" />
     <Compile Include="FrontEnd\HeaderPage.cs" />
+    <Compile Include="FrontEnd\OrderPages.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Core\User.cs" />
