--- a/GameShop/GameShop/GameShop.csproj
+++ b/GameShop/GameShop/GameShop.csproj
@@ -53,7 +53,7 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="FrontEnd\BlackList.cs" />
+    <Compile Include="Core\BlackList.cs" />
     <Compile Include="FrontEnd\FormGen.cs" />
     <Compile Include="FrontEnd\FormPage.cs" />
     <Compile Include="Core\Game.cs" />
