--- a/GameShop/GameShop/GameShop.csproj
+++ b/GameShop/GameShop/GameShop.csproj
@@ -32,8 +32,11 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.ReportViewer.Common, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" />
+    <Reference Include="Microsoft.ReportViewer.WinForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web.Services" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -61,11 +64,16 @@
     <Compile Include="FrontEnd\LogOnPage.cs" />
     <Compile Include="FrontEnd\HeaderPage.cs" />
     <Compile Include="FrontEnd\OrderPages.cs" />
+    <Compile Include="Manager.cs" />
+    <Compile Include="Member.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Core\User.cs" />
     <Compile Include="FrontEnd\UserPages.cs" />
     <Compile Include="FrontEnd\Widget.cs" />
+    <Compile Include="Staff.cs" />
+    <Compile Include="Transaction.cs" />
+    <Compile Include="TransactionReportForm.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
